test/files/neg/tcpoly_bounds.scala
class A[m[x] <: Option[x]]
object a extends A[Some]
object b extends A[List]
