test/files/neg/tcpoly_bounds.check
tcpoly_bounds.scala:3: error: type arguments [List] do not conform to class A's type parameter bounds [m<: [x]>: Nothing <: Option[x]]
object b extends A[List]
                 ^
one error found
